# ufs_obs

./: .readthedocs.yaml  README.md  build.sh  requirements.pip  requirements.txt  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yaml
.github/workflows/: pycodestyle.yaml  unittests.yaml
.github/workflows/ISSUE_TEMPLATE/: feature_request.yaml
Docker/: ubuntu20.04.ufs_obs.dockerfile
docs/source/: atcf.rst  cimss_adt.rst  conf.py  examples.rst  index.rst  requirements.txt  tempdrop.rst
parm/: config.yaml
parm/cimss_adt_atcf/: cimss_adt_atcf.yaml
parm/schema/: atcf_read.schema.yaml  atcf_write.tmpl  cimss_adt_read.schema.yaml  task_schema.yaml  tempdrop_decode_read.schema.yaml
parm/vdm_process/: vdm_process.yaml
scripts/: cimss_adt.py  compute.cimss_adt_atcf.py  compute_obs.py  vdm_process.py
scripts/schema/: compute_obs.schema.yaml
sorc/: atcf.py  build_obs.py  exceptions.py  observation.py
sorc/obsio/: atcf_read.py  cimss_adt_read.py  tempdrop_read.py
sorc/obsio/sonde/: advect.py  fallrate.py  hsa.py  sondelib.f
sorc/obsio/sonde/advect/: interp.py  update_time.py
sorc/obsio/sonde/hsa/: location.py  write.py
sorc/ufs_obs/: atcf.py  observation.py
sorc/ufs_obs/obsio/: atcf_read.py
sorc/ufs_obs/tests/: test_obsio_read_atcf.py
ufs_obs/: atcf.py
ufs_obs/obsio/: atcf_read.py
ush/: atcf.py  exceptions.py
ush/obsio/: atcf_read.py
ush/schema/: atcf_read.schema.yaml
ush/vdm/: __init__.py  collect.py  format.py  ncwrite.py
