[metadata]
name = ufs_obs
version = 0.0.1
description = "Unified Forecast System Observation package."
long_description = file: README.md
long_description_content_type = text/markdown
author = "Henry R. Winterbottom"
author_email = "henry.winterbottom@noaa.gov"
home_page = https://github.com/HenryWinterbottom-NOAA/ufs_obs
license = "License :: OSI Approved :: LGPL-2.0 License"
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: Science/Research
  License :: OSI Approved :: LGPL-2.0 License
  Programming Language :: Python :: >=3.5
  Topic :: Software Development :: Libraries :: Python Module

[options]
python_requires = >= 3.5
setup_requires = setuptools
install_requires =
  pybufrkit
  metpy

[options.packages.find]
where=sorc
